# rdbkp2

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  README_EN.md  config.toml  justfile
.github/workflows/: ci.yml
docker/: Dockerfile  config.ini  config.yaml  docker-compose.yaml  simServer.py  simServerDepend.py  test_backup.sh
locales/: app.yml
src/: lib.rs  main.rs
src/commands/: backup.rs  container.rs  lifecycle.rs  mod.rs  privileges.rs  prompt.rs  restore.rs  symbollink.rs
src/config/: mod.rs
src/docker/: mod.rs
src/tests/: mod.rs
src/utils/: mod.rs  out.rs  path.rs
