[package]
name = "rdbkp2"
version = "2.1.3"
edition = "2024"
authors = ["unic <yuniqueunic@gmail.com>"]
description = "A CLI tool for backing up and restoring Docker container data"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yuniqueunic/rdbkp2"
repository = "https://github.com/yuniqueunic/rdbkp2"
keywords = ["docker", "backup", "cli", "container", "volume"]
categories = ["command-line-utilities", "development-tools"]


# 公共依赖，所有平台都会使用
[dependencies]
# CLI 参数解析
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = "4.5.1"
# CLI 交互
dialoguer = "0.11.0"
# Docker API
bollard = { version = "0.18", features = ["ssl"] }
# 配置文件
toml = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
# 压缩/解压
tar = "0.4.40"
xz2 = "0.1.7"
# 错误处理
anyhow = "1.0.80"
thiserror = "2"
# 异步运行时
tokio = { version = "1.44", features = ["full"] }
# 日志
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# 文件系统操作
walkdir = "2.4.0"
# 时间处理
chrono = "0.4.34"
# 临时文件
tempfile = "3.18"
# 文件系统操作增强
fs_extra = "1.3.0"
# 文件系统路径操作
dunce = "1.0.5"
# Mock 测试
mockall = "0.13.1"
privilege = "0.3.0"
dirs = "6.0.0"
semver = "1.0"
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
rust-i18n = "3.1.3"
# OpenSSL
# 改用 rustls 替代 openssl, 避免交叉编译问题
# openssl-sys = { version = "0.9", features = ["vendored"] }

# 针对 Linux 的依赖
[target.'cfg(target_os = "linux")'.dependencies]

# 针对 Windows 的依赖
[target.'cfg(target_os = "windows")'.dependencies]
# windows api
# winapi = { version = "0.3.9", features = [
#     "securitybaseapi",
#     "winerror",
#     "shellapi",
# ] }
# 运行命令
runas = "1.2.0"

# 针对 macOS 的依赖
[target.'cfg(target_os = "macos")'.dependencies]
# Start of Selection


[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
# End of Selection

[dev-dependencies]
# 测试
assert_fs = "1.0"
predicates = "3.0"
